chore(prices): remove unused prices
- update price history calculation to rebuild all history
